--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-This is in feature1 branch. This is new line added
+This is in feature1 branch. This is new line added.
+<br>
+This is final line added.
